<resources>

    <string name="app_name">ActivityForceNewTask</string>
    <string name="pref_support_title">Support Thread</string>
    <string name="pref_support_summary">Changes apply immediately.</string>
    <string name="pref_enable_log_title">Enable Logging</string>
    <string name="pref_enable_log_summary">Logging will only happen if this option is checked.
    </string>
    <string name="pref_list_type_title">Filter Type</string>
    <string name="pref_list_type_summary">Choose between the blacklist and the whitelist.</string>
    <string name="list_type_entries_blacklist">Blacklist</string>
    <string name="list_type_entries_whitelist">Whitelist</string>
    <string name="pref_show_app_icon_title">Show Launcher Icon</string>
    <string name="pref_show_app_icon_summary">Disable to hide the icon of this app in your
        launcher.
    </string>
    <string name="pref_list_title">Component Filter</string>
    <string name="pref_list_summary">Setup the filter to act on or ignore certain activity
        components.
    </string>
    <string name="pref_log_title">Log</string>
    <string name="pref_log_summary">View logged activity components.</string>
    <string name="pref_disabled_title">Disable Module</string>
    <string name="pref_disabled_summary">Quickly enable/disable the module if it\'s causing
        problems, without having to reboot.
    </string>
    <string name="button_add">Add</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_clear">Clear</string>
    <string name="button_help">Help</string>
    <string name="toast_duplicate">Item already exists.</string>
    <string name="toast_added">Item added.</string>
    <string name="blacklist_help">All \'acceptable\' activities will be forced to start in a new
        task, except those added to the blacklist.\n%1$s
    </string>
    <string name="whitelist_help">Only \'acceptable\' activities that are also in the whitelist will
        be forced to start in a new task.\n%1$s</string>
    <string name="logging_help">Whenever an \'acceptable\' activity is started, a log entry will be
        created for it. You can tap an entry to automatically add it to the currently used filtering
        mode.\n%1$s
    </string>
    <string name="acceptable_activity_help">An activity is deemed acceptable if:\n
        • FLAG_ACTIVITY_NEW_TASK is not already set;\n
        • The intent is \'safe\' - that is, the launching app does not expect data back;\n
        • The activity isn\'t launched by its own app.\n
    </string>

</resources>
