<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
            android:key="pref_support"
            android:title="@string/pref_support_title"
            android:summary="@string/pref_support_summary">
        <intent
                android:action="android.intent.action.VIEW"
                android:data="http://forum.xda-developers.com/showthread.php?t=2646504"/>
    </Preference>
    <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_disabled"
            android:title="@string/pref_disabled_title"
            android:summary="@string/pref_disabled_summary"/>
    <ListPreference
            android:key="pref_list_type"
            android:title="@string/pref_list_type_title"
            android:summary="@string/pref_list_type_summary"
            android:dialogTitle="@string/pref_list_type_title"
            android:defaultValue="0"
            android:entries="@array/list_type_entries"
            android:entryValues="@array/list_type_values"/>
    <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_log_enable"
            android:title="@string/pref_enable_log_title"
            android:summary="@string/pref_enable_log_summary"/>
    <Preference
            android:key="pref_list"
            android:title="@string/pref_list_title"
            android:summary="@string/pref_list_summary"/>
    <Preference
            android:key="pref_log"
            android:title="@string/pref_log_title"
            android:summary="@string/pref_log_summary"/>
    <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_show_app_icon"
            android:title="@string/pref_show_app_icon_title"
            android:summary="@string/pref_show_app_icon_summary"/>
</PreferenceScreen>
